--- a/src/main/resources/config/redis.properties
+++ b/src/main/resources/config/redis.properties
@@ -1,10 +1,10 @@
 #####################################################
-########### redis 相关配置
+########### redis \u76F8\u5173\u914D\u7F6E
 #####################################################
 spring.redis.database=0
-spring.redis.host=47.106.141.11
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=qwer1234.
+spring.redis.password=
 spring.redis.pool.max-total=20
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=20
