--- a/src/main/resources/config/redis.properties
+++ b/src/main/resources/config/redis.properties
@@ -4,7 +4,7 @@
 spring.redis.database=0
 spring.redis.host=127.0.0.1
 spring.redis.port=6379
-spring.redis.password=
+spring.redis.password=qwer1234.
 spring.redis.pool.max-total=20
 spring.redis.pool.max-wait=-1
 spring.redis.pool.max-idle=20
