--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -59,7 +59,7 @@ interceptor:
     excludePathPatterns:
   back-authorization:
     addPathPatterns: /api/*/back/**
-    excludePathPatterns: /sys/back/sysManager/getExitLogin,/sys/back/sysManager/updateManagerPwd,/sys/back/sysManager/managerInfo,/sys/back/sysMenu/authority/getAuthorityMenuList
+    excludePathPatterns: /api/sys-manager/back/updatePwd,/api/sys-manager/back/logout,/api/sys-menu/back/getMenuList,/api/sys-role/back/getRoleInfo,/api/sys-menu/back/getMenuById
 
 
 
