--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -35,6 +35,7 @@ mybatis-plus:
   global-config:
       refresh: true
       db-config:
+        field-strategy: not_null
         db-type: mysql
         id-type: id_worker
 
@@ -52,7 +53,7 @@ web:
 # 拦截器资源过滤URL
 interceptor:
   front-authentication:
-    addPathPatterns: /front/**
+    addPathPatterns: /api/*/front/**
     excludePathPatterns:
   back-authentication:
     addPathPatterns: /api/*/back/**
