--- a/src/main/resources/config/jwt.properties
+++ b/src/main/resources/config/jwt.properties
@@ -1,7 +1,7 @@
 #####################################################
-########### jwt token签名规则
+########### jwt token\u7B7E\u540D\u89C4\u5219
 #####################################################
-audience.clientId= 098f6bcd4621d373cade4e832627b4f6
+audience.clientId= 2389rfjskdfh238hsjfhsjk8234eufhsgdfgj83h
 audience.base64Secret= MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
-audience.name= restapiuser
+audience.name= restapiauthtication
 audience.expiresSecond= 604800000
